--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     testCompile 'junit:junit:4.12'
     compile project(':androidffmpeglibrary')
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
