--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".FFmpegAndroidLibraryActivity" />
         <activity android:name=".AndroidFFmpegLibraryActivity"/>
         <activity android:name=".FFmpegAndroidLibraryGetAllImageActivity"/>
+        <activity android:name=".MediaCodecActivity"/>
     </application>
 
 </manifest>
