--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile project(':androidffmpeglibrary')
     compile project(':FFmpegAndroid')
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.wseemann:FFmpegMediaMetadataRetriever-armeabi:1.0.14'
 }
