--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".AndroidFFmpegLibraryActivity"/>
         <activity android:name=".FFmpegAndroidLibraryGetAllImageActivity"/>
         <activity android:name=".MediaCodecActivity"/>
+        <activity android:name=".MediaMetadataRetrieverActivity"/>
+        <activity android:name=".FFmpegMediaMetadataRetrieverActivity"/>
     </application>
 
 </manifest>
