--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,7 @@ dependencies {
     compile project(':FFmpegAndroid')
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.github.wseemann:FFmpegMediaMetadataRetriever-armeabi:1.0.14'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
 }
