--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".FFmpegMediaMetadataRetrieverActivity"/>
         <activity android:name=".MediaMetadataRetrieverVideoViewActivity"/>
         <activity android:name=".EndProjectActivity"/>
+        <activity android:name=".CropVideoActivity"/>
     </application>
 
 </manifest>
